# claude-usage

./: .env.example  .gitignore  CHANGELOG.md  README.md  cli.py  dashboard.py  pyproject.toml  scanner.py
Formula/: claude-usage.rb
scripts/: run-docker.sh
tests/: test_cli.py  test_cli_subagent.py  test_dashboard.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts  sidebar.ts
vscode-extension/test/: sidebar.test.ts
